--- a/Trabalho.cbp
+++ b/Trabalho.cbp
@@ -51,6 +51,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="listaPontos.h" />
+		<Unit filename="listaRetas.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="listaRetas.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
