--- a/Trabalho.cbp
+++ b/Trabalho.cbp
@@ -66,6 +66,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="menu.h" />
+		<Unit filename="transformacoes.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="transformacoes.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
