--- a/Trabalho.cbp
+++ b/Trabalho.cbp
@@ -66,6 +66,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="menu.h" />
+		<Unit filename="save.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="save.h" />
 		<Unit filename="transformacoes.c">
 			<Option compilerVar="CC" />
 		</Unit>
